# KORYAO-basic

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AUTOCAD_MCP_SETUP.md  CHANGELOG.md  CODEX_SETUP.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_DRAFT.md  ROADMAP.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  design-qa.md  package-lock.json  package.json  pyproject.toml  starbridge.projects.json
.codex/: config.example.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bridge-safety.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  starbridge-desktop-release.yml
apps/starbridge-desktop/: README.md  index.html  package-lock.json  package.json
apps/starbridge-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/starbridge-desktop/src-tauri/capabilities/: main.json
apps/starbridge-desktop/src-tauri/icons/: README.md
apps/starbridge-desktop/src-tauri/src/: adobe_export.rs  lib.rs  licensing.rs  updater.rs
apps/starbridge-site/: README.md  package.json
benchmark/: __init__.py
benchmark/vector60/: README.md  __init__.py  aggregate.py  report.md
brand/: BRAND_GUIDELINES.md  brand-tokens.json
brand/scripts/: build-brand-assets.mjs
cad-mcp-autocad/: LICENSE  README.md  README_en.md  README_zh.md  requirements.txt
cad-mcp-autocad/src/: nlp_processor.py
docs/: 02-codex-comfyui.md  03-codex-photoshop.md  04-codex-blender.md  05-codex-illustrator.md  06-codex-jianying.md  07-codex-computer-use.md  08-codex-stable-fast-3d.md  ARCHITECTURE_V2.md  CAPABILITY_MATRIX.md  CLOSED_MODEL_ARCHITECTURE.md  COMMERCIAL_FEATURE_BOUNDARY_AUDIT.md  OFFLINE_COMMERCIALIZATION.md  P1_PREREQUISITES.md  PRIVATE_PRO_ARCHITECTURE.md  PRODUCTIZATION_AUDIT.md  PRODUCT_FACTS.md  PRO_COMMERCIAL_TERMS_DRAFT.md  PR_CLEANUP_REPORT.md  README.md  RELEASE_V0_1_ALPHA.md  SOFTWARE_UPDATE_CHANNEL.md  WEBSITE_SOURCE_AND_DEPLOYMENT.md  WINDOWS_RELEASE_READINESS.md  adaptive-vector-optimization.md  adobe-ai-agent-integration-map.md  adobe-demo-gallery.md  adobe-mcp-github-research.md  advanced-project-comparison.md  advanced-project-core-patterns.md  artisan-vector-mode.md  autocad-dxf-bridge-mvp.md  blender-reference-verified-reconstruction.md  client-compatibility.md  codex-claude-mcp-local-adoption.md  codex-drawing-tool-integrations.md  codex-live-in-app.md  codex-operation-manual.md  codex-software-control-planner.md  codex-usage-prompts.md  codex-version-coordination-service.md  (+53 more)
docs/cad_exact_trace_sync/: README.md  latest_snapshot.json
docs/protocols/: desktop_connections.v1.schema.json  desktop_connections.v2.schema.json
docs/reference-study/: photoshop-hard-task-success-patterns.md
docs/validation/: windows-second-machine-2026-07-22.md
docs/workflows/: comfyui-generation-v1.md  photoshop-production-v1.md  vector-delivery-v1.md
examples/: bridge_capabilities.json  bridge_status.py
examples/blender_bridge/: README.md  bridge.json  bridge_status.json  reference_reconstruction_plan.py  scene_plan.py
examples/cad/: README.md  example_plan.json  example_prompt.txt  generate_dxf_plan.py  make_ultra_fine_reference_cad.py
examples/capcut_jianying_bridge/: bridge_status.json  draft_structure.py
examples/comfy_bridge/: README.md  bridge.json  bridge_status.json  comfy_probe.py  probe.py  run_txt2img.py  validate_workflow.py  workflow_agent.py  workflow_lifecycle.py  workflow_template_registry.py  workflow_templates.py
examples/illustrator_bridge/: README.md  bridge.json  bridge_status.json  write_demo_manifest.py
examples/live_session/: starbridge_live_session.v1.schema.json
examples/output/: README.md
examples/photoshop_bridge/: README.md  bridge.json  bridge_status.json  layer_intent.example.json  public_dataset.example.json  write_demo_manifest.py  write_practice_report.py
examples/plans/: capcut_timeline_gui.json  comfyui_structured_workflow_check.json  hybrid_photoshop_script_then_gui_verify.json  illustrator_vector_gui.json  photoshop_poster_gui.json
examples/stable_fast_3d_bridge/: README.md  bridge.json  bridge_status.json  probe.py  sample_report.example.json
handoff/: test-report.md
model_contracts/: README.md  __init__.py  constants.py  schema_registry.py  validation.py
node_proxy/: live-session.js
product/: capability-status.schema.json  product-manifest.json
scripts/: bootstrap_starbridge.ps1  check_forbidden_files.ps1  check_product_facts.py  check_release_ready.ps1  check_repository_safety.ps1  check_text_encoding.py  export_cad_trace_snapshot.py  install-from-url.ps1  publish_live_session.py  quickstart.ps1  register_cad_trace_sync_task.ps1  setup_starbridge.ps1  starbridge_preflight.py  start_starbridge_app.ps1  start_starbridge_canvas.ps1  sync_cad_trace_snapshot.ps1  trace_alpha_to_autocad.py
starbridge_mcp/: __init__.py  backend.py  mcp_server.py  server.py
tests/: test_adaptive_vector_optimization.py  test_artisan_direction.py  test_artisan_illustrator.py  test_artisan_paint.py  test_autocad_dxf_bridge.py  test_backend_api.py  test_backend_desktop_security.py  test_backend_projects_workflows.py  test_bootstrap_entrypoint.py  test_bridge_capability_matrix.py  test_bridge_status_files.py  test_chinese_labels.py  test_ci_commands.py  test_collect_bridge_status.py  test_color_vector_repair.py  test_color_vectorization.py  test_comfy_txt2img.py  test_comfy_workflow_validate.py  test_comfyui_agent_run.py  test_comfyui_asset_list.py  test_comfyui_generation_cancel.py  test_comfyui_generation_pipeline.py  test_comfyui_generation_result.py  test_comfyui_regenerate.py  test_comfyui_workflow_builder.py  test_comfyui_workflow_repair.py  test_computer_use_plans.py  test_control_planner.py  test_creative_transaction.py  test_deepened_bridge_capabilities.py  test_desktop_connections.py  test_docs_no_private_paths.py  test_drawio_compiler.py  test_editable_99.py  test_evidence_manifest.py  test_exact_pixel_vector.py  test_illustrator_artisan_host.py  test_illustrator_color_trace.py  test_illustrator_realtime_proxy.py  test_illustrator_uxp_bridge.py  (+59 more)
(+514 files in other folders)
