[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "starbridge-creative-software-mcp"
version = "0.1.0a0"
description = "Windows-first, local-first MCP stdio server and safety bridge for connecting AI agents (Codex, Cursor, Claude) to creative desktop software."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "StarBridge contributors" }]
keywords = ["mcp", "model-context-protocol", "codex", "comfyui", "autocad", "dxf", "photoshop", "illustrator", "blender", "ai-agent", "local-first", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jianbaorui07-dot/Codex-Integration-with-Creative-Industry-Software"
Repository = "https://github.com/jianbaorui07-dot/Codex-Integration-with-Creative-Industry-Software"
Issues = "https://github.com/jianbaorui07-dot/Codex-Integration-with-Creative-Industry-Software/issues"
Documentation = "https://github.com/jianbaorui07-dot/Codex-Integration-with-Creative-Industry-Software/tree/main/docs"

[project.optional-dependencies]
dev = [
  "Pillow>=10,<13",
  "pytest>=8",
  "ruff>=0.4.0",
  "mypy>=1.10",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
]
cad = [
  "ezdxf>=1.3",
  "pywin32>=306; platform_system == 'Windows'",
]
comfy = [
  "websocket-client>=1.8,<2",
]
adobe = [
  "Pillow>=10,<13",
  "pywin32>=306; platform_system == 'Windows'",
]
illustrator-trace = [
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<5",
  "Pillow>=10,<13",
]
illustrator-vector = [
  "Pillow>=10,<13",
]

[project.scripts]
starbridge = "starbridge_mcp.server:main"
starbridge-mcp = "starbridge_mcp.mcp_server:main"
starbridge-backend = "starbridge_mcp.backend:main"

[tool.setuptools.packages.find]
include = ["starbridge_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts = "--cov=starbridge_mcp --cov-report=term-missing"  # enable after pip install pytest-cov


[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/unreal_worldforge_agent/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "E402", "E741", "SIM102", "SIM105", "B905", "SIM212"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
