[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "starbridge-creative-software-mcp"
version = "0.1.0a0"
description = "Windows-first, local-first MCP stdio server and safety bridge for connecting AI agents (Codex, Cursor, Claude) to creative desktop software."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CreNexus contributors" }]
keywords = ["mcp", "model-context-protocol", "codex", "comfyui", "autocad", "dxf", "photoshop", "illustrator", "blender", "ai-agent", "local-first", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "tomli>=2; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/jianbaorui07-dot/CreNexus"
Repository = "https://github.com/jianbaorui07-dot/CreNexus"
Issues = "https://github.com/jianbaorui07-dot/CreNexus/issues"
Documentation = "https://github.com/jianbaorui07-dot/CreNexus/tree/main/docs"

[project.optional-dependencies]
dev = [
  "Pillow>=10,<13",
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<6",
  "pytest>=8",
  "ruff>=0.4.0",
  "mypy>=1.10",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
]
cad = [
  "ezdxf>=1.3",
  "pywin32>=306; platform_system == 'Windows'",
]
comfy = [
  "websocket-client>=1.8,<2",
]
adobe = [
  "Pillow>=10,<13",
  "pywin32>=306; platform_system == 'Windows'",
]
image-to-psd = [
  "Pillow>=10,<13",
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<6",
  "pywin32>=306; platform_system == 'Windows'",
]
illustrator-trace = [
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<6",
  "Pillow>=10,<13",
]
illustrator-vector = [
  "Pillow>=10,<13",
]
vectorization = [
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<6",
  "Pillow>=10,<13",
]
vector-refinement = [
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<6",
  "Pillow>=10,<13",
  "vtracer>=0.6.11,<0.7",
]
vector-app = [
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<6",
  "Pillow>=10,<13",
  "PySide6>=6.8,<7",
]

[project.scripts]
starbridge = "starbridge_mcp.server:main"
starbridge-mcp = "starbridge_mcp.mcp_server:main"
starbridge-backend = "starbridge_mcp.backend:main"
starbridge-vectorize = "starbridge_mcp.vectorization.cli:main"
starbridge-artisan-brief = "starbridge_mcp.vectorization.artisan_brief:main"
starbridge-artisan-refine = "starbridge_mcp.vectorization.artisan_refine:main"
starbridge-artisan-paint = "starbridge_mcp.vectorization.artisan_paint:main"
starbridge-artisan-direction = "starbridge_mcp.vectorization.artisan_direction:main"
starbridge-artisan-illustrator = "starbridge_mcp.vectorization.artisan_illustrator:main"
vectorflow-studio = "starbridge_mcp.vectorization.app:main"
starbridge-image-to-psd = "starbridge_mcp.adapters.photoshop.semantic_layers.cli:main"

[tool.setuptools.packages.find]
include = ["starbridge_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts = "--cov=starbridge_mcp --cov-report=term-missing"  # enable after pip install pytest-cov


[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/unreal_worldforge_agent/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "E402", "E741", "SIM102", "SIM105", "B905", "SIM212"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
